Version 1.1.1 (WIP)
    Additions:
    - Added mods:
        - Better Compatibility Checker
        - Enchantment descriptions
        - Crafting Tweaks

    Changes:
    - Updated several mods
    - Changed some recipes:
        - Sack is cheaper
        - Augments can be salvaged on a cutting board
        - Ritual tablets are made in the Hephaestus Forge now
    - Config changes:
        - Tarot Cards:
            - The Fool: Jump Boost I -> II
            - Wheel of Fortune: 2 luck -> 5 luck
            - The Lovers: range 5 -> 25
            - The Empress: range 3 -> 0.75
        - Iron's Spells (Should only apply to new worlds):
            - Some spells can no longer be crafted (They must be found)
            - Disabled the following spells:
                - Invisibility
                - Angel Wing
            - Spell cooldowns changed:
                - Blink: 1.5s -> 3s
                - Recall: 5m -> 20m
            - Imbued weapon spell cooldown +50% -> +80%

    Fixes:

Version 1.1.0
    Additions:
    - Added mods:
        - Create Cobblestone
        - Psi
        - Dice
        - Chimes
        - Game Discs
        - Macaw's Paintings
    - Added a new item for crafting Command Block tools: the Withered Smithing Template
    - More mob & achievement trophies to the questbook
    - Wrote more tips for loading/pause screens
    - New hidden achievements and new tips to help guide you to them
    - World Generation additions to the custom Depths dimension:
        - Two new structures: the Deep Monster Room, and the Dragon's Grave
        - Added a new biome, Dragon's Hollow
        - New "ore geodes" which contain lots of a specific ore.
            - Added ruby and sapphire ore geodes
    - More enemy and equipment variety to the random enemies in the Dimensional Dungeons
    - New Gate Pearls for the Gateways to Eternity mod:
        - Basic Gate Pearls for farming Warden, Shulker, Ender Dragon, and Wilden mob drops