@@ -313,7 +313,6 @@
 		{ item: "trailandtales_delight:cheese_slice" }
 		{ item: "trailandtales_delight:stuffed_sniffer_egg" }
 		{ item: "trailandtales_delight:golden_lantern_fruit" }
-		{ item: "call_of_yucutan:xocolatl" }
 		{ item: "ancient_aether:festive_gummy_swet" }
 		{ item: "hexcasting:sub_sandwich" }
 		{ item: "oceanic_delight:ancient_fish_eggs" }
