@@ -1,3 +1,4 @@
 {
+    "icon": "kubejs:slot/bundle_slot",
     "order": -86
 }
